# ox

./: Cargo.toml  README.md  WALKTHROUGH.md  notes.txt  vulkano_pain_points.txt
example_game/: Cargo.toml
example_game/src/: blocks.rs  main.rs  world.rs
ox/src/: lib.rs  loader.rs  ray.rs  voxel_type.rs
ox/src/renderer/: context.rs  mod.rs  pipeline.rs  test_context.rs  utils.rs
ox/src/renderer/buffers/: mod.rs
ox/src/renderer/component/: camera.rs  materials.rs  mod.rs
ox/src/world/: loader.rs  mod.rs
ox/src/world/camera/: mod.rs
ox/src/world/mem_grid/: layer.rs  layer_set.rs  mod.rs  utils.rs
ox/tests/: test_chunk_loading.rs  test_integration.rs
shaders/: raytrace.comp
src/: camera.rs  lib.rs  main.rs  util.rs  voxel_type.rs
src/renderer/: buffers.rs  context.rs  mod.rs  pipeline.rs  swapchain.rs  transfer.rs
src/renderer/buffers/: mod.rs
src/renderer/buffers/dual/: const_local.rs  dynamic_regions.rs  full_copy.rs  mod.rs
src/renderer/component/: camera.rs  materials.rs  mod.rs  ubo.rs
src/renderer/component/voxel/: data.rs  lod.rs  mod.rs
src/renderer/component/voxels/: data.rs  lod.rs  mod.rs
src/world/: camera.rs  loader.rs  mod.rs
src/world/camera/: mod.rs
src/world/camera/controller/: winit.rs
src/world/mem_grid/: layer.rs  layer_contents.rs  layer_set.rs  mod.rs  physical_grid.rs  utils.rs  virtual_grid.rs  world_data.rs
src/world/mem_grid/rendering/: gpu_defs.rs  grid.rs  lod.rs  mod.rs
src/world/mem_grid/rendering_data/: gpu_defs.rs  mod.rs
src/world/mem_grid/voxel/: gpu_defs.rs  grid.rs  lod.rs  (+1 more)
tests/: test_chunk_loading.rs
(+10 files in other folders)
