[package]
name = "ox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28.7"
itertools = "0.12.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
cgmath = "0.18.0"
enum-iterator = "1.4.1"
derive-new = "0.6.0"
paste = "1.0.14"
smallvec = "1.11.2"
derive_more = "0.99.17"
hashbrown = "0.14.3"
priority-queue = "1.3.2"
getset = "0.1.2"

[profile.dev]
opt-level = 1
